Add fitness data generator service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,12 @@ services:
     ports:
       - "5432:5432"
 
+  generator:
+    build: ./generator
+    container_name: fitness_generator
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
+  
